# ifmocpp

./: README.md
cpp/: README.md
task1/: main.c
task2/: main.c
task3/: CMakeLists.txt  main.cpp  rational.cpp  rational.h
task6/: CMakeLists.txt  lazy_string.cpp  lazy_string.h  test.cpp
